--- a/PhoS/client/stylesheets/home.css
+++ b/PhoS/client/stylesheets/home.css
@@ -1,115 +1,33 @@
-.headerMenu {
-	float: right;
-	color:white;
-	margin-top: -50px;
-	margin-right: 10px;
-}
-
-.headerMenu p {
-	color: #fff;
-	display: inline-block;
-}
-
-.headerMenu a {
-	color: #fff;
-	display: inline-block;
-}
-
-.headerMenu div {
-	color: #fff;
-	display: inline-block;
-}
-
-.activityDropdown {
-	display: inline-block;
-	margin-left: 200px;
-	margin-top: 90px;
-}
-
-.selectDiv {
-	display: inline-block;
-	float: left;
-	height: 20px;
-	background-color: rgba(204, 204, 204, 0.50);
-	border-radius: 6px;
-	width: 400px;
-}
-
 .submitButton {
 	display: inline-block;
 	-webkit-appearance: none;
 	height: 20px;
-	margin-left: 15px;
-	background-color:#FFF;
+	margin-left: 15px; 
+	background: rgba(227, 220, 225, 0.7);
 	font-family: 'NeoSans-Medium';
 	border: solid #666 1px;
 	font-size: 14px;
 	border-radius: 6px;
 }
 
-.selectDiv select {
-	width: 400px;
-	background: transparent;
-	padding-left: 5px;
-	font-size: 14px;
-	border: 0;
-	border-radius: 6px;
-	height: 20px;
-	font-family: 'NeoSans-Medium';
-	border: 1px solid #ccc;
-	border-radius: 6px;
-}
-
-/* The CSS */
-select {
-	padding:3px;
-	margin: 0;
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px;
-	border-radius:4px;
-	-webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-	-moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-	box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-	background: rgba(227, 220, 225, 0.7);
-	border:none;
-	outline:none;
-	display: inline-block;
-	appearance:none;
-	cursor:pointer;
+.activityForm {
+	width: 60%;
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
 .activitySelect {
-	width: 400px;
+	width: 80%;
+	height:26px;
+	font-size: 14px;
+	display: inline-block;	
+	-webkit-border-radius:6px;
+	-moz-border-radius:6px;
+	border-radius:6px;
+	padding:6px 10px;
 }
 
-/* Targetting Webkit browsers only. FF will show the dropdown arrow with so much padding. */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	select {padding-right:18px}
+.afterActivity:after {
+	height: 26px;
+	right: 20px;
 }
-
-label {position:relative}
-label:after {
-	content: '<>';
-	font: 11px "Consolas", monospace;
-	color: #aaa;
-	-webkit-transform: rotate(90deg);
-	-moz-transform: rotate(90deg);
-	-ms-transform: rotate(90deg);
-	transform: rotate(90deg);
-	right: 8px;
-	top: 2px;
-	padding: 0 0 2px;
-	position: absolute;
-	pointer-events: none;
-}
-label:before {
-	content: '';
-	right: 6px;
-	top: 0px;
-	width: 20px;
-	height: 20px;
-	position: absolute;
-	pointer-events: none;
-	display: block;
-}
-
